Enhance InvoiceForm layout and data handling